--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -1,12 +1,12 @@
 .data-explorer-page-container {
+  position: absolute;
   height: 100%;
+  width: 100%;
   padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   flex-wrap: nowrap;
-  flex: 1 1;
-  min-height: 0;
   color: var(--react-autoql-text-color-primary);
 
   .data-explorer-section,
