--- a/src/components/DataExplorer/DataPreview.scss
+++ b/src/components/DataExplorer/DataPreview.scss
@@ -32,12 +32,12 @@
   }
 
   .custom-scrollbar-view:hover::-webkit-scrollbar-corner {
-    background-color: transparent;
+    // background-color: transparent;
   }
   .custom-scrollbar-view:hover::-webkit-scrollbar-track,
   .custom-scrollbar-view:hover::-webkit-scrollbar-track-piece,
   .custom-scrollbar-view::-webkit-scrollbar-corner {
-    background-color: transparent;
+    // background-color: transparent;
   }
 
   .data-explorer-data-preview {
