--- a/src/components/CustomScrollbars/CustomScrollbars.scss
+++ b/src/components/CustomScrollbars/CustomScrollbars.scss
@@ -1,7 +1,7 @@
 ::-webkit-scrollbar {
-  visibility: hidden;
-  width: 6px;
-  height: 6px;
+  // visibility: hidden;
+  // width: 6px;
+  // height: 6px;
 }
 
 .scrollbar-content-container {
