--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -37,8 +37,8 @@
   width: 100%;
 }
 .react-autoql-response-content-container.table::-webkit-scrollbar {
-  width: 0;
-  height: 0;
+  // width: 0;
+  // height: 0;
 }
 
 .react-autoql-suggestion-btn {
@@ -140,6 +140,8 @@
 }
 
 .query-output-table-row-count {
+  position: absolute;
+  bottom: 0;
   width: 100%;
   padding-top: 3px;
   font-size: 13px;
