--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -40,11 +40,7 @@
   width: 100vw;
   max-width: 100%;
   overflow: hidden;
-}
-
-.react-autoql-response-content-container.table::-webkit-scrollbar {
-  // width: 0;
-  // height: 0;
+  height: 100%;
 }
 
 .react-autoql-suggestion-btn {
