--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -1,6 +1,7 @@
 .react-autoql-chart-container {
   position: relative;
   width: 100%;
+  max-height: 100%;
   flex-grow: 1;
   flex-shrink: 1;
   overflow: hidden;
