--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -19,10 +19,10 @@
     padding-top: 3px;
   }
 
-  .react-autoql-tablulator-container {
+  .react-autoql-tabulator-container {
     position: relative;
-    // height: calc(100% - 30px);
-    // max-height: calc(100% - 30px);
+    height: 100%;
+    max-height: 100%;
     min-height: 100px;
 
     .tabulator-cell,
@@ -75,7 +75,7 @@
       }
     }
 
-    .react-autoql-tablulator-container .tabulator-tableholder {
+    .react-autoql-tabulator-container .tabulator-tableholder {
       min-height: calc(100% - 60px) !important;
       height: calc(100% - 60px) !important;
       max-height: calc(100% - 60px) !important;
@@ -96,7 +96,7 @@
       visibility: hidden;
     }
 
-    .react-autoql-tablulator-container .tabulator-tableholder {
+    .react-autoql-tabulator-container .tabulator-tableholder {
       min-height: calc(100% - 37px) !important;
       height: calc(100% - 37px) !important;
       max-height: calc(100% - 37px) !important;
