--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -19,10 +19,10 @@
     padding-top: 3px;
   }
 
-  .react-autoql-tablulator-container {
+  .react-autoql-tabulator-container {
     position: relative;
-    height: calc(100% - 30px);
-    max-height: calc(100% - 30px);
+    height: 100%;
+    max-height: 100%;
     min-height: 100px;
 
     .tabulator-cell,
@@ -36,10 +36,6 @@
     position: absolute;
     pointer-events: none;
     opacity: 0;
-  }
-
-  &.infinite:not(.last-page) .tabulator-row:last-child {
-    margin-bottom: 40px;
   }
 
   &.resizing {
@@ -75,7 +71,7 @@
       }
     }
 
-    .react-autoql-tablulator-container .tabulator-tableholder {
+    .react-autoql-tabulator-container .tabulator-tableholder {
       min-height: calc(100% - 60px) !important;
       height: calc(100% - 60px) !important;
       max-height: calc(100% - 60px) !important;
@@ -96,7 +92,7 @@
       visibility: hidden;
     }
 
-    .react-autoql-tablulator-container .tabulator-tableholder {
+    .react-autoql-tabulator-container .tabulator-tableholder {
       min-height: calc(100% - 37px) !important;
       height: calc(100% - 37px) !important;
       max-height: calc(100% - 37px) !important;
@@ -212,6 +208,7 @@
         margin-right: 5px;
         vertical-align: top;
         line-height: 21px;
+        margin-left: -11px;
       }
     }
 
@@ -231,6 +228,7 @@
 
       &:last-child {
         border-bottom: none;
+        margin-bottom: 15px;
       }
 
       .tabulator-cell {
@@ -250,7 +248,7 @@
       background-color: var(--react-autoql-background-color-secondary);
 
       .tabulator-col-title {
-        padding-left: 10px !important;
+        padding-left: 12px !important;
         padding-right: 15px !important;
       }
       .tabulator-col-content {
