--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -10,6 +10,7 @@
   background: var(--react-autoql-background-color-secondary);
 
   &.hidden {
+    position: absolute;
     visibility: hidden;
     flex: 0 0 0;
     opacity: 0;
