--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -22,6 +22,7 @@
   .react-autoql-tabulator-container {
     position: relative;
     height: 100%;
+    width: 100%;
     max-height: 100%;
     min-height: 100px;
 
