--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -38,9 +38,9 @@
 }
 .react-autoql-response-content-container.chart {
   width: 100vw;
+  height: 100vh;
   max-width: 100%;
   overflow: hidden;
-  height: 100%;
 }
 
 .react-autoql-suggestion-btn {
