--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -45,6 +45,10 @@
   transform: scale(0);
 }
 
+.react-autoql-modal-content {
+  height: 100%;
+  width: 100%;
+}
 .react-autoql-modal-header {
   position: relative;
   text-align: center;
