--- a/src/components/Notifications/NotificationFeed/NotificationFeed.scss
+++ b/src/components/Notifications/NotificationFeed/NotificationFeed.scss
@@ -30,7 +30,7 @@
 .react-autoql-notification-list-container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 60px);
   background: var(--react-autoql-background-color-primary);
 
   .notification-feed-list {
