--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -2,6 +2,10 @@
   font-family: var(--react-autoql-font-family), sans-serif;
   line-height: 22px;
   outline: none !important;
+
+  .react-autoql-notification-list-container {
+    height: calc(100% - 60px);
+  }
 }
 
 .react-autoql-drawer.disable-selection {
