feat: 🎸 delete create alert button
✅ Closes: AC-2611

--- a/src/components/Notifications/DataAlerts/DataAlerts.scss
+++ b/src/components/Notifications/DataAlerts/DataAlerts.scss
@@ -3,7 +3,16 @@
   color: var(--react-autoql-text-color-primary);
   padding-top: 20px;
   height: 100%;
-
+  .empty-list-message {
+	color: var(--react-autoql-text-color-primary);
+	text-align: center;
+	margin-top: 75px;
+  
+	.empty-list-img {
+	  width: 250px;
+	  height: 250px;
+	}
+  }
   .react-autoql-notification-settings-container {
     margin: 20px;
     margin-top: 10px;
@@ -77,6 +86,7 @@
       opacity: 0.5;
       pointer-events: none;
     }
+
   }
 
   .react-autoql-notification-title-container {
