--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -1,4 +1,5 @@
 .react-autoql-table-container {
+  -webkit-transform: translate3d(0, 0, 0);
   display: flex;
   flex-direction: column;
   width: 100% !important;
