--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -1,3 +1,15 @@
+.react-autoql-dashboard,
+.react-autoql-dashboard-container,
+.react-autoql-dashboard-tile,
+.dashboard-tile-title-container,
+.react-autoql-dashboard-tile-inner-div,
+.dashboard-tile-toolbars-container,
+.dashboard-tile-response-wrapper,
+.dashboard-tile-response-container {
+  -webkit-transform: translate3d(0, 0, 0) !important;
+  transform: translateZ(0) !important;
+}
+
 .react-autoql-dashboard .react-autoql-dashboard-tile {
   background: var(--react-autoql-background-color-secondary, #fff);
   color: var(--react-autoql-text-color-primary, rgb(64, 64, 64));
@@ -481,6 +493,7 @@
 
 /* React Grid Layout overrides */
 .react-grid-item .react-resizable-handle {
+  -webkit-transform: translate3d(0, 0, 0);
   z-index: 1;
   position: absolute;
   width: 11px;
