--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -3,6 +3,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  padding-top: 3px;
 }
 .react-autoql-dashboard-container.edit-mode {
   padding-bottom: 200px;
