fix: table height bug

--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -255,6 +255,7 @@
       text-align: center !important;
       border-color: transparent;
       background-color: var(--react-autoql-background-color-secondary);
+      min-height: 35px;
 
       .tabulator-col-title {
         padding-left: 12px !important;
