--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,6 +5,13 @@
   transition: all 0.2s ease;
   width: auto;
   display: inline-block;
+
+  &.btn-no-border {
+    border: none !important;
+    &:hover {
+      opacity: 0.8;
+    }
+  }
 }
 
 // State
@@ -25,15 +32,23 @@
 }
 
 // Type
-.react-autoql-btn.default {
-  color: inherit;
-  border: 1px solid var(--react-autoql-border-color);
+.react-autoql-btn.btn-no-border {
+  color: var(--react-autoql-accent-color);
   background: inherit;
   &:hover {
-    border-color: var(--react-autoql-accent-color);
-    color: var(--react-autoql-accent-color);
+    background: var(--react-autoql-mask-color);
   }
 }
+
+.react-autoql-btn.default {
+  border: 1px solid var(--react-autoql-accent-color);
+  color: var(--react-autoql-accent-color);
+  background: inherit;
+  &:not(.btn-no-border):hover {
+    background: var(--react-autoql-mask-color);
+  }
+}
+
 .react-autoql-btn.primary {
   background: var(--react-autoql-accent-color);
   border: 1px solid var(--react-autoql-accent-color);
@@ -42,13 +57,25 @@
     opacity: 0.8;
   }
 }
-.react-autoql-btn.danger {
-  color: var(--react-autoql-danger-color, #ca0b00);
-  border: 1px solid var(--react-autoql-danger-color, #ca0b00);
-  background: inherit;
 
-  &:hover {
-    background-color: var(--react-autoql-danger-color, #ca0b00);
+.react-autoql-btn.danger {
+  &:not(.btn-filled) {
+    color: var(--react-autoql-danger-color, #ca0b00);
+    border: 1px solid var(--react-autoql-danger-color, #ca0b00);
+    background: inherit;
+
+    &:hover {
+      background: var(--react-autoql-mask-color);
+    }
+  }
+
+  &.btn-filled {
     color: var(--react-autoql-text-color-accent);
+    background: var(--react-autoql-danger-color, #ca0b00);
+    border: 1px solid var(--react-autoql-danger-color, #ca0b00);
+
+    &:hover {
+      opacity: 0.8;
+    }
   }
 }
