--- a/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
+++ b/src/components/Notifications/ScheduleBuilder/ScheduleBuilder.scss
@@ -1,41 +1,41 @@
-.react-autoql-step-container {
-  a {
-    color: var(--react-autoql-accent-color, #26a7df);
-  }
-}
+// .react-autoql-step-container {
+//   a {
+//     color: var(--react-autoql-accent-color, #26a7df);
+//   }
+// }
 
-.frequency-date-select-container {
-  margin-top: 10px;
-}
+// .frequency-date-select-container {
+//   margin-top: 10px;
+// }
 
-.notification-frequency-step {
-  display: flex;
+// .notification-frequency-step {
+//   display: flex;
 
-  .frequency-category-select {
-    position: relative;
-    padding-top: 9px;
-  }
+//   .frequency-category-select {
+//     position: relative;
+//     padding-top: 9px;
+//   }
 
-  .notification-frequency-select {
-    margin-left: 8px;
-  }
-  .frequency-repeat-checkbox .react-autoql-checkbox-label {
-    line-height: 33px;
-  }
-  .frequency-repeat-follow-text {
-    line-height: 32px;
-    vertical-align: top;
-  }
-  .frequency-settings-container {
-    flex: 0 1 400px;
-  }
-}
+//   .notification-frequency-select {
+//     margin-left: 8px;
+//   }
+//   .frequency-repeat-checkbox .react-autoql-checkbox-label {
+//     line-height: 33px;
+//   }
+//   .frequency-repeat-follow-text {
+//     line-height: 32px;
+//     vertical-align: top;
+//   }
+//   .frequency-settings-container {
+//     flex: 0 1 400px;
+//   }
+// }
 
-.schedule-builder-timezone-section {
-  margin: 10px 5px;
+// .schedule-builder-timezone-section {
+//   margin: 10px 5px;
 
-  .react-autoql-timezone-select {
-    display: inline-block;
-    width: 300px;
-  }
-}
+//   .react-autoql-timezone-select {
+//     display: inline-block;
+//     width: 300px;
+//   }
+// }
