--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -2,7 +2,8 @@
   border: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.1));
   border-radius: 4px;
   background: var(--react-autoql-background-color-secondary, white);
-  display: inline-block;
+  display: inline-flex;
+  justify-content: space-between;
   font-size: 13px;
   line-height: 32px;
   height: 34px;
@@ -10,21 +11,36 @@
   padding: 0 11px;
   color: var(--react-autoql-accent-color, #26a7df);
   transition: all 0.2s ease;
+  white-space: nowrap;
   cursor: pointer;
 
   &:hover {
     border-color: var(--react-autoql-accent-color, #26a7df);
   }
+
+  .react-autoql-select-text {
+    display: block;
+
+    .react-autoql-select-text-placeholder {
+      color: var(--react-autoql-text-color-placeholder);
+      font-style: italic;
+    }
+  }
+
+  .react-autoql-select-arrow {
+    display: block;
+    padding-left: 8px;
+  }
 }
 
 .react-autoql-select-popup-container {
-  background: var(--react-autoql-background-color-secondary, white);
+  background: var(--react-autoql-background-color-secondary);
   padding: 10px 0;
   max-height: 300px;
   overflow-y: auto;
 
   .react-autoql-select-option.active {
-    background: var(--react-autoql-hover-color, rgba(0, 0, 0, 0.04));
+    background: var(--react-autoql-hover-color);
   }
   .react-autoql-select-popup {
     list-style-type: none;
@@ -41,7 +57,7 @@
       cursor: pointer;
 
       &:hover {
-        background: var(--react-autoql-hover-color, rgba(0, 0, 0, 0.04));
+        background: var(--react-autoql-hover-color);
       }
     }
   }
