fix: single value response should show 0 for no data found

--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -126,7 +126,7 @@
 
 .react-autoql-dashboard-tile-inner-div {
   .single-value-response {
-    font-size: 32px;
+    font-size: 32px !important;
     margin-top: -6px;
     opacity: 0.9;
   }
