--- a/src/components/ChataTable/ChataTable.scss
+++ b/src/components/ChataTable/ChataTable.scss
@@ -51,6 +51,7 @@
   &.empty {
     &:not(.filtering) {
       .tabulator-headers {
+        overflow: hidden;
         height: 37px !important;
       }
     }
