--- a/src/components/Notifications/ExpressionBuilderSimpleV2/ExpressionBuilderSimpleV2.scss
+++ b/src/components/Notifications/ExpressionBuilderSimpleV2/ExpressionBuilderSimpleV2.scss
@@ -3,6 +3,7 @@
   border: 1px solid transparent;
   border-radius: 4px;
   padding-bottom: 5px;
+  margin-top: 8px;
 }
 
 .expression-error-message {
