--- a/src/components/Notifications/RuleSimpleV2/RuleSimpleV2.scss
+++ b/src/components/Notifications/RuleSimpleV2/RuleSimpleV2.scss
@@ -1,11 +1,43 @@
 .react-autoql-notification-rule-container {
   display: flex;
   align-items: flex-end;
-  margin-bottom: 14px;
+
+  .react-autoql-rule-input {
+    .react-autoql-input-icon.react-autoql-bubbles-outlined {
+      font-size: 18px !important;
+    }
+  }
+
+  .data-alert-rule-formatted-query {
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    margin-top: 5px;
+    font-weight: 600;
+
+    .data-alert-rule-tooltip-icon {
+      margin-left: 10px;
+      color: var(--react-autoql-text-color-placeholder);
+      opacity: 0.6;
+    }
+
+    .react-autoql-icon.react-autoql-bubbles-outlined {
+      margin-right: 5px;
+    }
+
+    .react-autoql-chip {
+      margin: 0;
+    }
+  }
+
+  .rule-second-input-type-select {
+    text-decoration: underline;
+    cursor: pointer;
+  }
 
   .react-autoql-input-container,
   .react-autoql-rule-condition-select {
-    margin: 0;
+    margin: 0 !important;
   }
   .react-autoql-input-container:hover + .react-autoql-rule-term-type-selector,
   .react-autoql-input-container.focus + .react-autoql-rule-term-type-selector {
@@ -13,24 +45,21 @@
     border-color: var(--react-autoql-accent-color);
   }
 
-  .react-autoql-rule-input-label {
-    margin: 0 3px;
-    padding-bottom: 5px;
-    font-size: 0.875em;
-    color: var(--react-autoql-text-color-placeholder);
-    font-weight: 600;
-  }
-
   .react-autoql-rule-input {
     display: flex;
     flex-direction: column;
     flex: 1;
+
+    .react-autoql-input-icon.react-autoql-bubbles-outlined {
+      padding-bottom: 2px;
+    }
   }
 
   .react-autoql-rule-first-input-container {
     display: flex;
     flex-direction: column;
     flex: 1;
+    margin-bottom: 28px;
   }
 
   .react-autoql-rule-condition-select-input-container {
@@ -40,7 +69,7 @@
     border-radius: 4px;
     transition: all 0.3s ease;
     flex: 0 0 auto;
-    margin-right: 10px;
+    margin-right: 12px;
   }
 
   .react-autoql-rule-second-input-container {
