--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -1,23 +1,32 @@
 .react-autoql-chip {
+  position: relative;
   display: inline-flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-between;
-  border-radius: 5px;
-  padding: 5px 8px;
   border: 1px solid transparent;
   background-color: var(--react-autoql-background-color-secondary);
   color: var(--react-autoql-text-color-primary);
   transition: all 0.2s ease;
-  margin-right: 10px;
-  margin-top: 5px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
-    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-  cursor: pointer;
+  margin-right: 5px;
+  font-size: 0.875em;
+  border-radius: 50px;
+  padding: 5px 12px;
+  overflow: hidden;
 
-  &:hover {
-    border: 1px solid var(--react-autoql-accent-color);
+  .react-autoql-chip-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.3;
+    background: var(--react-autoql-accent-color);
   }
+
+  // &:hover {
+  //   border-color: var(--react-autoql-accent-color);
+  // }
 
   &.selected {
     background-color: var(--react-autoql-accent-color);
@@ -32,9 +41,11 @@
     margin-left: 8px;
     transition: opacity 0.2s ease;
     opacity: 0.7;
+    cursor: pointer;
 
     &:hover {
       opacity: 1;
+      color: var(--react-autoql-accent-color);
     }
   }
 }
