--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -1,6 +1,13 @@
 .react-autoql-icon {
   position: relative;
   opacity: 1;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: baseline;
+  line-height: 1em;
+  height: 1em;
+  width: 1em;
 
   &.warning {
     color: var(--react-autoql-warning-color) !important;
@@ -11,24 +18,23 @@
 }
 
 span.react-autoql-icon {
-  vertical-align: unset;
-  text-align: left;
-  margin: 0;
-  padding: 0;
-  float: none !important;
-  color: inherit;
+  // vertical-align: unset;
+  // text-align: left;
+  // margin: 0;
+  // padding: 0;
+  // float: none !important;
+  // color: inherit;
 
   svg {
-    float: none !important;
-    color: inherit;
-    vertical-align: unset;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-    opacity: 1;
-    height: 1em;
-    width: 1em;
-    margin-bottom: -0.15em;
+    // float: none !important;
+    // color: inherit;
+    // vertical-align: unset;
+    // text-align: left;
+    // margin: 0;
+    // padding: 0;
+    // opacity: 1;
+    // height: 1em;
+    // width: 1em;
   }
 }
 
