--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,4 +1,7 @@
 .ReactModal__Overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: transparent !important;
   transition: background-color 0.2s ease-in-out;
   z-index: 9999;
@@ -10,6 +13,7 @@
   background-color: transparent !important;
 }
 .ReactModal__Content {
+  position: initial !important;
   display: flex;
   flex-direction: column;
   overflow: hidden !important;
@@ -18,12 +22,16 @@
   transition: all 0.2s ease-in-out;
 
   color: var(--react-autoql-text-color-primary);
-  border: 1px solid var(--react-autoql-border-color) !important;
   background: var(--react-autoql-background-color-secondary) !important;
   box-shadow: 0 0 14px 1px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
-  padding: 0 !important;
+  border: 1px solid var(--react-autoql-border-color) !important;
+  border-radius: 4px !important;
+  outline: none !important;
 
-  margin: auto auto;
+  padding: 0 !important;
+  margin-top: 40px;
+  margin-bottom: 50px;
+
   max-width: 90vw;
   max-height: calc(100vh - 90px);
 
@@ -75,14 +83,16 @@
   display: flex;
   flex-direction: column;
 
-  padding: 10px 20px;
+  padding: 20px 30px;
   flex: 1;
 }
 .react-autoql-modal-close-btn {
   position: absolute !important;
-  top: 10px;
-  right: 18px;
+  top: 0;
+  right: 0;
+  height: 100%;
   font-size: 22px;
+  margin-right: 14px;
   opacity: 0.6 !important;
   cursor: pointer;
 }
