--- a/src/components/Notifications/NotificationIcon/NotificationIcon.scss
+++ b/src/components/Notifications/NotificationIcon/NotificationIcon.scss
@@ -1,14 +1,17 @@
 .react-autoql-notifications-button-container {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
-  display: inline-block;
   font-size: inherit;
   line-height: 1em;
   width: 1em;
+  height: 1em;
 
   .react-autoql-notifications-button {
     font-size: 1em;
-    line-height: 0;
-    vertical-align: bottom;
+    height: 1em;
+    width: 1em;
   }
 
   .react-autoql-notifications-badge {
