--- a/src/components/OptionsToolbar/OptionsToolbar.scss
+++ b/src/components/OptionsToolbar/OptionsToolbar.scss
@@ -1,5 +1,7 @@
 .options-toolbar {
-  display: inline-block;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
   background: inherit;
   padding: 5px;
   border-radius: 6px;
@@ -9,11 +11,18 @@
   box-shadow: 0px 2px 3px -2px var(--react-autoql-box-shadow-color);
 
   &.vertical .react-autoql-toolbar-btn {
-    display: block;
+    flex-direction: column;
   }
 
   .react-autoql-toolbar-btn {
     color: var(--react-autoql-text-color-primary);
+  }
+}
+
+.more-options-menu {
+  li {
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -22,7 +31,7 @@
   background: var(--react-autoql-background-color-secondary);
   padding: 10px 0;
 
-  span.react-autoql-icon svg {
+  span.react-autoql-icon {
     margin-right: 3px;
   }
 }
@@ -39,8 +48,10 @@
   }
 
   .report-problem-text-area {
-    width: 100%;
+    width: 100% !important;
+    max-width: 100% !important;
     min-height: 80px;
+    max-height: 35vh;
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.15);
     margin-top: 15px;
